# lightnovel-cli

./: .gitignore  .vimspector.json  Cargo.toml  LICENSE  PKGBUILD  README.md  README.org  rustfmt.toml
src/: epub.rs  epubs.rs  main.rs  renderer.rs  screen.rs  ueberzug.rs
